...
                            fit: BoxFit.scaleDown,
                            child: Row(
                              mainAxisAlignment: MainAxisAlignment.center,
                              children: [
                                Text(
                                  isEnough
                                      ? 'Continue'
                                      : 'Select ${8 - selectedCount} more',
                                  style: AppTheme.button.copyWith(
                                    color: Colors.white,
                                  ),
                                ),
                                if (isEnough) ...[
...
